[gd_scene load_steps=2 format=3 uid="uid://dw28x5qyvrwa3"]

[ext_resource type="Script" path="res://addons/dialogue_visual_editor/dialogue_editor/scripts/dialogue_text.gd" id="1_4si1o"]

[node name="DialogueText" type="GraphNode" node_paths=PackedStringArray("assign_button", "option_button", "text_box", "button_picker", "button_list")]
offset_right = 303.0
offset_bottom = 138.0
mouse_filter = 1
title = "Dialogue"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_4si1o")
assign_button = NodePath("Button")
option_button = NodePath("OptionButton")
text_box = NodePath("TextEdit")
button_picker = NodePath("ButtonPicker")
button_list = NodePath("ButtonPicker/ItemList")

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Dialogue Writing"
wrap_mode = 1
scroll_fit_content_height = true

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Default"
popup/item_1/text = "Exposition"
popup/item_1/id = 1
popup/item_2/text = "Start"
popup/item_2/id = 2
popup/item_3/text = "End"
popup/item_3/id = 3

[node name="Button" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Assign Button"

[node name="ButtonPicker" type="AcceptDialog" parent="."]
title = "Pick Assigned Button"
initial_position = 4
size = Vector2i(200, 300)
exclusive = false
popup_window = true
ok_button_text = "Close"

[node name="ItemList" type="ItemList" parent="ButtonPicker"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 251.0
item_count = 1
item_0/text = "Item 1"

[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
